[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-reprojection"
version = "1.1.0"
description = "Validate reprojection of 3D GCP coordinates to image coordinates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["photogrammetry", "gcp", "reprojection", "camera", "trajectory", "SBET", "BINGO"]
dependencies = [
    "numpy>=1.20.0",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gcp-validate = "gcp_reprojection.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gcp-reprojection"
Documentation = "https://github.com/yourusername/gcp-reprojection#readme"
Repository = "https://github.com/yourusername/gcp-reprojection"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcp_reprojection*"]

[tool.pytest.ini_options]
testpaths = ["gcp_reprojection/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
